Fix tweets display on mobile devices

--- a/public/style.less
+++ b/public/style.less
@@ -161,4 +161,7 @@ div{
 		margin-left: -20px;
 		margin-right: -20px;
 	}
+	.tweet-meta{
+		display: none;
+	}
 }
